@@ -1,3 +1,11 @@
+2008-05-25  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* configure.in:
+	* src/yelp-search-parser.c (check_finished), (snippet_response),
+	(search_parser_process_idle):
+	Add support for newer releases of Beagle
+	bug #511244 - patch from Arun Raghavan
+
 2008-05-23  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-search-parser.c (search_clean_snippet):
